# deft-ttbar-2d-atlas

./: .gitignore  atlas_2D.json  atlas_2D_ctg_ctq.json  atlas_2D_multiple.json  atlas_2D_three_op.json  atlas_2D_three_op_test.json  pyproject.toml
atlas_analysis/: __main__.py  analysis.py  analysis_1D.py  config.py  data.py  fitting.py  plot.py
