[tool.poetry]
name = "atlas_2d_analysis"
version = "0.1.0"
description = ""
authors = ["Alex Veltman"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
SciencePlots = "^1.0.7"
deft-hep = "^0.5.8"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
